Bug 105428 - transition-property accepts incorrect "all, none" as value
Summary: transition-property accepts incorrect "all, none" as value
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Alexis Menard (darktears)
URL:
Keywords: WebExposed
Depends on:
Blocks: 93136
  Show dependency treegraph
 
Reported: 2012-12-19 06:14 PST by Alexis Menard (darktears)
Modified: 2013-02-04 03:18 PST (History)
5 users (show)

See Also:


Attachments
Patch (7.10 KB, patch)
2013-01-23 10:30 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff
Patch (7.96 KB, patch)
2013-01-23 10:41 PST, Alexis Menard (darktears)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alexis Menard (darktears) 2012-12-19 06:14:54 PST
http://www.w3.org/TR/css3-transitions/#transition-property-property

style.transitionProperty = "all, none"; is possible in WebKit while the specification is :

none | [ all | <IDENT> ] [ ‘,’ [ all | <IDENT> ] ]*

so none, all or all, none is not possible.
Comment 1 Alexis Menard (darktears) 2013-01-23 10:30:44 PST
Created attachment 184259 [details]
Patch
Comment 2 Dean Jackson 2013-01-23 10:39:33 PST
Comment on attachment 184259 [details]
Patch

Alexis is going to add another test.
Comment 3 Alexis Menard (darktears) 2013-01-23 10:41:46 PST
Created attachment 184262 [details]
Patch
Comment 4 WebKit Review Bot 2013-01-23 11:29:08 PST
Comment on attachment 184262 [details]
Patch

Clearing flags on attachment: 184262

Committed r140560: <http://trac.webkit.org/changeset/140560>
Comment 5 WebKit Review Bot 2013-01-23 11:29:11 PST
All reviewed patches have been landed.  Closing bug.
Comment 6 Alexis Menard (darktears) 2013-02-04 03:18:33 PST
*** Bug 108751 has been marked as a duplicate of this bug. ***