transition-property accepts incorrect "all, none" as value https://bugs.webkit.org/show_bug.cgi?id=105428

Reviewed by Dean Jackson.

Source/WebCore:

http://www.w3.org/TR/css3-transitions/#transition-property-property
disallows any value like none, all or all, none as it doesn't make
sense. This patch fixes the problem by rejecting the value if set by
the user.

Test: transitions/transitions-parsing.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parseAnimationProperty):
* css/CSSParser.h:

LayoutTests:

Extend the existing tests to cover the bug.

* transitions/transitions-parsing-expected.txt:
* transitions/transitions-parsing.html:


Canonical link: https://commits.webkit.org/125896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140560 268f45cc-cd09-0410-ab3c-d52691b4dbfc